--- a/authserver/src/main/resources/templates/login.html
+++ b/authserver/src/main/resources/templates/login.html
@@ -27,15 +27,17 @@
 
 			<form method="post" action="./login">
 				<md-input-container style="width: 100%;margin-bottom: 0;">
-				<label>Email</label> <input ng-model="user.email" name="user.email"
-					value="malopes"></input> </md-input-container>
+				<label>Email</label> <input ng-model="user.email" name="user.email">
+				</input> </md-input-container>
 				<md-input-container
 					style="width: 100%;margin-top: 0;margin-bottom: 0;">
 				<label>Password</label> <input ng-model="user.password"
-					name="user.password" type="password" value="123"></input> </md-input-container>
+					name="user.password" type="password"></input> </md-input-container>
 				<md-input-container style="width: 100%;"> <md-button
 					type="submit" class="md-raised md-primary"
-					style="width: 100%;margin: 0;">Sign in</md-button> </md-input-container>
+					style="width: 100%;margin: 0;">Sign in</md-button>
+					<input type="submit" value="VAI!!!!!" />
+					 </md-input-container>
 			</form>
 			</md-card-content> </md-card>
 		</div>
