--- a/authserver/src/main/resources/templates/login.html
+++ b/authserver/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
 
 			<form method="post" action="./login">
 				<md-input-container style="width: 100%;margin-bottom: 0;">
-				<label>Email</label> <input ng-model="user.email" name="user.email">
+				<label>Username</label> <input ng-model="user.email" name="user.email">
 				</input> </md-input-container>
 				<md-input-container
 					style="width: 100%;margin-top: 0;margin-bottom: 0;">
